--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,17 @@ body {
   position: relative;
   background: #FFF;
 }
+
+jumbo-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 p {
   line-height: 1.5;
-  margin: 30px 0;
+
+  margin-left: 10%;
+  margin-right: 10%;
 }
 p a {
   /* text-decoration: underline */
